--- a/app/admin/templates/dashboard/base.html
+++ b/app/admin/templates/dashboard/base.html
@@ -43,8 +43,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin.dashboard_offers') }}">Offers</a>
                         </li>
-                           <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('reports.reports_home') }}">Reports</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('reports.reports_home') }}">التقارير</a>
                         </li>
                     </ul>
                 </div>
